--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -5,10 +5,11 @@
     <div class="aboutus-container">
         <div class="aboutus_container">
             <h2>MEMBERS</h2>
+            <img class="us" src="{% static 'img/us.png' %}">
             <div>
                 <ul class="mem">
                     <div class="mem_img">
-                        <img src="{% static 'img/jwj.png' %}" alt="kakao Login">
+                        <img src="{% static 'img/jwj.png' %}">
                     </div>
                     <p>정원준(PM)</p>
                         <li>기획, 백엔드</li>
@@ -18,7 +19,7 @@
                 </ul>
                 <ul class="mem">
                     <div class="mem_img">
-                        <img src="{% static 'img/khj.png' %}" alt="kakao Login">
+                        <img src="{% static 'img/khj.png' %}">
                     </div>
                     <p>김현진</p>
                         <li>백엔드</li>
@@ -28,7 +29,7 @@
                 </ul>
                 <ul class="mem">
                     <div class="mem_img">
-                        <img src="{% static 'img/lyj.png' %}" alt="kakao Login">
+                        <img src="{% static 'img/lyj.png' %}">
                     </div>
                     <p>임유지</p>
                         <li>프론트엔드, 디자인</li>
@@ -38,7 +39,7 @@
                 </ul>
                 <ul class="mem">
                     <div class="mem_img">
-                        <img src="{% static 'img/ktr.png' %}" alt="kakao Login">
+                        <img src="{% static 'img/ktr.png' %}">
                     </div>
                     <p>김태린</p>
                         <li>백엔드</li>
@@ -48,7 +49,7 @@
                 </ul>
                 <ul class="mem">
                     <div class="mem_img">
-                        <img src="{% static 'img/pth.png' %}" alt="kakao Login">
+                        <img src="{% static 'img/pth.png' %}">
                     </div>
                     <p>박태희</p>
                         <li>프론트엔드, 디자인</li>
