--- a/templates/guidemap.html
+++ b/templates/guidemap.html
@@ -6,7 +6,8 @@
         <div class="guidemap_container">
             <h2>Guide Map</h2>
             <div class="guidemap">
-                <img src="{% static 'img/guidemap.png' %}">
+                <img src="{% static 'img/guidemap1.png' %}">
+                <img src="{% static 'img/guidemap2.png' %}">
             </div>
         </div>
     </div>
