fix: 답글달기 error

--- a/templates/qanda_room.html
+++ b/templates/qanda_room.html
@@ -72,7 +72,7 @@
         </div>
     </footer>
     {% endblock %}
-    {% block script %}
+    {% block scripts %}
 
     <script>
    document.addEventListener("DOMContentLoaded", () => {
