--- a/static/css/style-lyj.css
+++ b/static/css/style-lyj.css
@@ -137,6 +137,9 @@ p{
     max-width: 80%;
     text-align: center;
 }
+.introduce_container, .setting_container {
+    padding: 30px 40px;
+}
 .introduce_container, .setting_container, .guidemap_container {
     display: flex;
     flex-direction: column;
@@ -146,10 +149,10 @@ p{
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     max-width: 80%;
-    padding: 30px 40px;
 }
 .guidemap_container {
     height: 80%;
+    padding: 20px 40px;
 }
 .guidemap {
     overflow-y: scroll;
@@ -712,5 +715,5 @@ h6 {
 }
 .us {
     width: 100%;
-    margin-block: 6rem;
+    margin-block: 4rem;
 }
