--- a/static/css/style-lyj.css
+++ b/static/css/style-lyj.css
@@ -153,7 +153,10 @@ p{
 }
 .guidemap_container {
     height: 80%;
-    padding: 20px 40px;
+    padding: 0 40px;
+}
+.guidemap_container h2 {
+    margin-top: 3rem;
 }
 .guidemap {
     overflow-y: scroll;
