--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -444,3 +444,26 @@
   font-size: 1.8rem;
   content: "\f4c8";
 }
+.custom-overlay {
+  position: relative;
+  width: 18px;
+  height: 18px;
+  text-align: center;
+  font-weight: bold;
+  background: white;
+  border-radius: 50%;
+  line-height: 20px;
+  font-size: 12px;
+  bottom: 27px;
+  left: 0.5px;
+  pointer-events: none;
+}
+
+.custom-overlay span {
+  font-weight: bold;
+}
+
+.custom-overlay .icon {
+  font-size: 1rem;
+  color: black;
+}
